--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
   "license": "MIT",
   "dependencies": {
     "babel-eslint": "^7.2.0",
+    "babel-jest": "^19.0.0",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-flowtype": "^2.32.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-react": "^6.10.0"
+    "eslint-plugin-react": "^6.10.0",
+    "jest": "^19.0.2"
   }
 }
