--- a/package.json
+++ b/package.json
@@ -20,8 +20,15 @@
   },
   "license": "MIT",
   "dependencies": {
+    "babel-cli": "^6.24.1",
     "babel-eslint": "^7.2.0",
     "babel-jest": "^19.0.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.4.0",
+    "babel-preset-flow": "^6.23.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-runtime": "^6.23.0",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-flowtype": "^2.32.0",
