--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "eslint",
     "jest"
   ],
+  "bin": {
+    "dev-build": "./bin/build.js",
+    "dev-lint": "./bin/lint.js",
+    "dev-test": "./bin/test.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/milesj/build-tool-config.git"
