--- a/.babelrc
+++ b/.babelrc
@@ -1,15 +1,15 @@
-module.exports = {
-  comments: false,
-  minified: true,
-  plugins: ['transform-runtime'],
-  presets: [
-    ['env', {
-      targets: { ie: 10 },
-      useBuiltIns: true,
-      debug: true,
+{
+  "comments": false,
+  "minified": true,
+  "plugins": ["transform-runtime"],
+  "presets": [
+    ["env", {
+      "targets": { "ie": 11 },
+      "useBuiltIns": true,
+      "debug": true,
     }],
-    'stage-2',
-    'react',
-    'flow',
+    "stage-2",
+    "react",
+    "flow",
   ],
-};
+}
