--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,4 @@
-module.exports = {
+{
   root: true,
   parser: 'babel-eslint',
   extends: ['airbnb'],
@@ -37,13 +37,14 @@ module.exports = {
     'no-eq-null': 'error',
     'no-extra-parens': ['error', 'all', {
       conditionalAssign: true,
-      nestedBinaryExpressions: false,
+      nestedBinaryExpressions: true,
       returnAssign: false,
       ignoreJSX: 'all',
     }],
     'no-implicit-coercion': 'error',
     'no-invalid-this': 'error',
     'no-magic-numbers': ['error', {
+      ignore: [-1, 0, 1],
       ignoreArrayIndexes: true,
       enforceConst: true,
     }],
@@ -63,7 +64,8 @@ module.exports = {
     'import/named': 'error',
     'import/order': ['error', {
       groups: ['builtin', 'external', 'internal', 'parent', 'sibling', 'index'],
-      'newlines-between': 'never',
+      // Doesn't work well with flowtype
+      // 'newlines-between': 'never',
     }],
     'react/forbid-foreign-prop-types': 'error',
     'react/jsx-handler-names': ['error', {
@@ -118,4 +120,4 @@ module.exports = {
     'flowtype/union-intersection-spacing': ['error', 'always'],
     'flowtype/use-flow-type': 'error',
   },
-};
+}
