--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "config",
     "babel",
     "eslint",
-    "jest"
+    "jest",
+    "flow"
   ],
   "bin": {
     "build-lib": "./bin/build.js",
