--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-flowtype": "^2.32.0",
     "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jest": "^20.0.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.0",
     "flow-bin": "^0.45.0",
