--- a/babel.node.json5
+++ b/babel.node.json5
@@ -1,12 +1,13 @@
 {
   babelrc: false,
   comments: false,
+  // Order is important here
   presets: [
-    'flow',
-    'stage-2',
     ['env', {
       targets: { node: 6.5 },
       useBuiltIns: true,
     }],
+    'stage-2',
+    'flow',
   ],
 }
