Updated eslint plugins.

--- a/eslint.json5
+++ b/eslint.json5
@@ -47,6 +47,7 @@
     'no-unused-vars': ['error', {
       vars: 'all',
       args: 'none', // Required for flowtype
+      ignoreRestSiblings: true,
     }],
     'no-useless-call': 'error',
     'prefer-destructuring': 'error',
@@ -64,16 +65,11 @@
     }],
     'react/jsx-key': 'error',
     'react/jsx-no-literals': 'error',
-    'react/jsx-max-props-per-line': ['error', {
-      maximum: 1,
-      when: 'multiline',
-    }],
     'react/no-direct-mutation-state': 'error',
     'react/sort-prop-types': ['error', {
-      ignoreCase: true,
+      ignoreCase: false,
       callbacksLast: true,
     }],
-    'react/void-dom-elements-no-children': 'error',
 
     // Does not work with Flowtype
     'no-extra-parens': 'off',
