Added rollup support.

--- a/babel.json5
+++ b/babel.json5
@@ -2,7 +2,7 @@
   babelrc: false,
   comments: false,
   plugins: ['transform-runtime'],
-  // Order is important here
+  // Order is important!
   presets: [
     ['env', {
       targets: { ie: 11 },
