--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   ],
   "bin": {
     "build-lib": "./bin/build.js",
+    "bundle-lib": "./bin/bundle.js",
     "run-coverage": "./bin/coverage.js",
     "run-linter": "./bin/lint.js",
     "run-tests": "./bin/test.js",
@@ -52,6 +53,12 @@
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-test-renderer": "^15.5.4",
-    "rimraf": "^2.6.1"
+    "rimraf": "^2.6.1",
+    "rollup": "^0.41.6",
+    "rollup-plugin-babel": "^2.7.1",
+    "rollup-plugin-commonjs": "^8.0.2",
+    "rollup-plugin-json": "^2.1.1",
+    "rollup-plugin-node-resolve": "^3.0.0",
+    "rollup-watch": "^3.2.2"
   }
 }
