Fixed babel target versions.

--- a/babel.node.json5
+++ b/babel.node.json5
@@ -4,7 +4,7 @@
   // Order is important!
   presets: [
     ['env', {
-      targets: { node: 6.5 },
+      targets: { node: '6.5' },
       useBuiltIns: true,
     }],
     'stage-2',
