--- a/babel.json5
+++ b/babel.json5
@@ -5,7 +5,7 @@
   // Order is important!
   presets: [
     ['env', {
-      targets: { ie: 11 },
+      targets: { ie: '11' },
       useBuiltIns: true,
     }],
     'stage-2',
