--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "eslint-plugin-react": "^7.0.1",
     "flow-bin": "^0.46.0",
     "jest": "^20.0.3",
+    "json5": "^0.5.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-test-renderer": "^15.5.4",
