Added uglify to rollup.

--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "rollup-plugin-commonjs": "^8.0.2",
     "rollup-plugin-json": "^2.1.1",
     "rollup-plugin-node-resolve": "^3.0.0",
+    "rollup-plugin-uglify": "^2.0.1",
     "rollup-watch": "^3.2.2"
   }
 }
