--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "babel",
     "eslint",
     "jest",
-    "flow"
+    "flow",
+    "rollup"
   ],
   "bin": {
     "build-lib": "./bin/build.js",
@@ -60,6 +61,7 @@
     "rollup-plugin-commonjs": "^8.0.2",
     "rollup-plugin-json": "^2.1.1",
     "rollup-plugin-node-resolve": "^3.0.0",
+    "rollup-plugin-replace": "^1.1.1",
     "rollup-plugin-uglify": "^2.0.1",
     "rollup-watch": "^3.2.2"
   }
