--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "type-check": "./bin/check.js"
   },
   "scripts": {
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "test": "yarn run lint"
   },
   "repository": {
     "type": "git",
@@ -54,6 +55,7 @@
     "eslint-plugin-import": "^2.3.0",
     "eslint-plugin-jest": "^20.0.3",
     "eslint-plugin-jsx-a11y": "^5.0.3",
+    "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-react": "^7.0.1",
     "flow-bin": "^0.47.0",
     "jest": "^20.0.4",
