--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "eslint-plugin-jsx-a11y": "^5.0.3",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-react": "^7.0.1",
+    "eslint-plugin-unicorn": "^2.1.1",
     "flow-bin": "^0.47.0",
     "jest": "^20.0.4",
     "json5": "^0.5.1",
