Enabled babel-plugin-transform-export-extensions.

--- a/babel.json5
+++ b/babel.json5
@@ -1,7 +1,7 @@
 {
   babelrc: false,
   comments: false,
-  plugins: ['transform-runtime'],
+  plugins: ['transform-export-extensions', 'transform-runtime'],
   // Order is important!
   presets: [
     ['env', {
