--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "babel-cli": "^6.24.1",
     "babel-eslint": "^7.2.0",
     "babel-jest": "^20.0.3",
+    "babel-plugin-transform-export-extensions": "^6.22.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.5.2",
     "babel-preset-flow": "^6.23.0",
@@ -48,7 +49,7 @@
     "babel-preset-stage-2": "^6.24.1",
     "babel-runtime": "^6.23.0",
     "copy": "^0.3.0",
-    "enzyme": "^2.8.2",
+    "enzyme": "^2.9.0",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.0.1",
     "eslint-plugin-flowtype": "^2.34.0",
