Updated eslint plugins.

--- a/eslint.node.json5
+++ b/eslint.node.json5
@@ -52,6 +52,12 @@
     'unicorn/prefer-type-error': 'error',
     'unicorn/throw-new-error': 'error',
 
+    // New and not in Airbnb yet
+    'import/no-anonymous-default-export': 'error',
+    'react/default-props-match-prop-types': 'error',
+    'react/jsx-closing-tag-location': 'error',
+    'react/no-redundant-should-component-update': 'error',
+
     // Want to support but disabled in Airbnb
     'complexity': ['error', 11],
     'jsx-quotes': ['error', 'prefer-double'],
