--- a/package.json
+++ b/package.json
@@ -73,7 +73,8 @@
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-replace": "^1.1.1",
     "rollup-plugin-uglify": "^2.0.1",
-    "rollup-watch": "^4.0.0"
+    "rollup-watch": "^4.0.0",
+    "yargs-parser": "^7.0.0"
   },
   "eslintConfig": {
     "extends": "./eslint.node.json5",
