--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "babel-cli": "^6.24.1",
     "babel-eslint": "^7.2.0",
     "babel-jest": "^20.0.3",
+    "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-transform-export-extensions": "^6.22.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.5.2",
