--- a/eslint.node.json5
+++ b/eslint.node.json5
@@ -7,6 +7,9 @@
     node: true,
     jest: true,
   },
+  globals: {
+    __DEV__: true,
+  },
   settings: {
     flowtype: {
       onlyFilesWithFlowAnnotation: true,
