--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "enzyme": "^2.9.1",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.0.2",
-    "eslint-plugin-flowtype": "^2.34.1",
+    "eslint-plugin-flowtype": "2.34.1",
     "eslint-plugin-import": "^2.6.1",
     "eslint-plugin-jest": "^20.0.3",
     "eslint-plugin-jsx-a11y": "^5.1.1",
@@ -68,14 +68,14 @@
     "react-dom": "^15.6.1",
     "react-test-renderer": "^15.6.1",
     "rimraf": "^2.6.1",
-    "rollup": "^0.43.0",
+    "rollup": "^0.45.2",
     "rollup-plugin-babel": "^2.7.1",
     "rollup-plugin-commonjs": "^8.0.2",
     "rollup-plugin-json": "^2.3.0",
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-replace": "^1.1.1",
     "rollup-plugin-uglify": "^2.0.1",
-    "rollup-watch": "^4.0.0",
+    "rollup-watch": "^4.3.1",
     "yargs-parser": "^7.0.0"
   },
   "eslintConfig": {
