--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-react": "^7.1.0",
     "eslint-plugin-unicorn": "^2.1.2",
+    "esprint": "^0.4.0-beta.11",
     "flow-bin": "^0.49.1",
     "jest": "^20.0.4",
     "json5": "^0.5.1",
