Updated to ESLint v4.3.

--- a/eslint.json5
+++ b/eslint.json5
@@ -27,4 +27,12 @@
       callbacksLast: true,
     }],
   },
+  overrides: [
+    {
+      files: 'tests/**/*.test.js',
+      rules: {
+        'react/jsx-no-literals': 'off',
+      },
+    },
+  ],
 }
