--- a/eslint.node.json5
+++ b/eslint.node.json5
@@ -2,9 +2,10 @@
   root: true,
   parser: 'babel-eslint',
   extends: ['airbnb/base'],
-  plugins: ['flowtype', 'promise', 'unicorn'],
+  plugins: ['flowtype', 'promise', 'unicorn', 'jest'],
   env: {
     node: true,
+    jest: true,
   },
   globals: {
     __DEV__: true,
@@ -134,19 +135,24 @@
 
     // Does not work with class properties
     'no-invalid-this': 'off',
+
+    // Temporary for tests
+    // 'no-magic-numbers': 'off',
+    'jest/no-identical-title': 'error',
+    'jest/valid-expect': 'error',
   },
-  overrides: [
-    {
-      files: ['tests/**/*.test.js'],
-      plugins: ['jest'],
-      env: {
-        jest: true,
-      },
-      rules: {
-        'no-magic-numbers': 'off',
-        'jest/no-identical-title': 'error',
-        'jest/valid-expect': 'error',
-      },
-    },
-  ],
+  // overrides: [
+  //   {
+  //     files: ['tests/**/*.test.js'],
+  //     plugins: ['jest'],
+  //     env: {
+  //       jest: true,
+  //     },
+  //     rules: {
+  //       'no-magic-numbers': 'off',
+  //       'jest/no-identical-title': 'error',
+  //       'jest/valid-expect': 'error',
+  //     },
+  //   },
+  // ],
 }
