Updated eslint-plugin-react and rollup.

--- a/eslint.json5
+++ b/eslint.json5
@@ -12,6 +12,8 @@
     'react/default-props-match-prop-types': 'error',
     'react/jsx-closing-tag-location': 'error',
     'react/no-redundant-should-component-update': 'error',
+    'react/no-typos': 'error',
+    'react/no-unused-state': 'error',
 
     // Want to support but disabled in Airbnb
     'react/forbid-foreign-prop-types': 'error',
