--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "dependencies": {
     "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
     "babel-eslint": "^7.2.0",
     "babel-jest": "^21.0.0",
     "babel-plugin-external-helpers": "^6.22.0",
