--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "babel-core": "^6.26.0",
     "babel-eslint": "^7.2.0",
     "babel-jest": "^21.0.0",
+    "babel-loader": "^7.1.2",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-transform-dev": "^2.0.0",
     "babel-plugin-transform-export-extensions": "^6.22.0",
@@ -53,6 +54,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "babel-runtime": "^6.26.0",
+    "clean-webpack-plugin": "^0.1.16",
     "copy": "^0.3.1",
     "enzyme": "^2.9.1",
     "eslint": "^4.7.0",
@@ -79,6 +81,8 @@
     "rollup-plugin-replace": "^2.0.0",
     "rollup-plugin-uglify": "^2.0.1",
     "rollup-watch": "^4.3.1",
+    "uglifyjs-webpack-plugin": "1.0.0-beta.2",
+    "webpack": "^3.6.0",
     "yargs-parser": "^7.0.0"
   },
   "eslintConfig": {
