--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "eslint",
     "jest",
     "flow",
-    "rollup"
+    "webpack"
   ],
   "bin": {
     "build-lib": "./bin/build.js",
@@ -68,19 +68,10 @@
     "eslint-plugin-unicorn": "^2.1.2",
     "flow-bin": "^0.54.1",
     "jest": "^21.0.1",
-    "json5": "^0.5.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-test-renderer": "^15.6.1",
     "rimraf": "^2.6.1",
-    "rollup": "0.49.2",
-    "rollup-plugin-babel": "^3.0.2",
-    "rollup-plugin-commonjs": "^8.2.1",
-    "rollup-plugin-json": "^2.3.0",
-    "rollup-plugin-node-resolve": "^3.0.0",
-    "rollup-plugin-replace": "^2.0.0",
-    "rollup-plugin-uglify": "^2.0.1",
-    "rollup-watch": "^4.3.1",
     "uglifyjs-webpack-plugin": "1.0.0-beta.2",
     "webpack": "^3.6.0",
     "yargs-parser": "^7.0.0"
