--- a/eslint.json5
+++ b/eslint.json5
@@ -1,5 +1,5 @@
-module.exports = {
-  extends: ['airbnb', './eslint.node.js'],
+{
+  extends: ['airbnb', './eslint.node.json5'],
   env: {
     browser: true,
     node: false,
@@ -29,4 +29,4 @@ module.exports = {
       callbacksLast: true,
     }],
   },
-};
+}
