--- a/eslint.node.json5
+++ b/eslint.node.json5
@@ -1,4 +1,4 @@
-module.exports = {
+{
   root: true,
   parser: 'babel-eslint',
   extends: ['airbnb/base'],
@@ -40,8 +40,8 @@ module.exports = {
     'flowtype/no-types-missing-file-annotation': 'error',
     'flowtype/no-weak-types': ['error', {
       any: true,
-      Object: false,
-      Function: true,
+      'Object': false,
+      'Function': true,
     }],
     'flowtype/object-type-delimiter': ['error', 'comma'],
     'flowtype/require-parameter-type': ['error', {
@@ -101,7 +101,7 @@ module.exports = {
     }],
 
     // Want to support but disabled in Airbnb
-    complexity: ['error', 11], // eslint-disable-line
+    'complexity': ['error', 11],
     'getter-return': 'error',
     'jsx-quotes': ['error', 'prefer-double'],
     'newline-before-return': 'error',
@@ -157,4 +157,4 @@ module.exports = {
   //     },
   //   },
   // ],
-};
+}
