--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "yargs-parser": "^7.0.0"
   },
   "eslintConfig": {
-    "extends": "./eslint.node.js",
+    "extends": "./eslint.node.json5",
     "rules": {
       "no-var": "off",
       "no-console": "off"
