--- a/eslint.node.json5
+++ b/eslint.node.json5
@@ -25,8 +25,9 @@
   },
   rules: {
     'class-methods-use-this': 'off',
+    'function-paren-newline': ['error', 'consistent'],
     'padded-blocks': ['error', {
-      // Dont apply either rule to blocks
+      // Never apply to blocks
       // blocks: 'never',
       classes: 'never',
       switches: 'never',
@@ -65,6 +66,8 @@
     'flowtype/union-intersection-spacing': ['error', 'always'],
     'flowtype/use-flow-type': 'error',
     'import/no-extraneous-dependencies': 'off',
+    'jest/no-identical-title': 'error',
+    'jest/valid-expect': 'error',
     'promise/always-return': 'error',
     'promise/avoid-new': 'off',
     'promise/catch-or-return': 'error',
@@ -91,27 +94,16 @@
     'unicorn/prefer-type-error': 'error',
     'unicorn/throw-new-error': 'error',
 
-    // New and not in Airbnb yet
-    'function-paren-newline': ['error', 'consistent'],
-    'no-multi-spaces': ['error', {
-      ignoreEOLComments: true,
-    }],
-    'import/no-anonymous-default-export': ['error', {
-      allowObject: true,
-    }],
-
     // Want to support but disabled in Airbnb
     'complexity': ['error', 11],
-    'getter-return': 'error',
     'jsx-quotes': ['error', 'prefer-double'],
     'newline-before-return': 'error',
-    'no-compare-neg-zero': 'error',
     'no-constant-condition': 'error',
     'no-div-regex': 'error',
     'no-eq-null': 'error',
     'no-implicit-coercion': 'error',
     'no-magic-numbers': ['error', {
-      ignore: [-1, 0, 1],
+      ignore: [-1, 0, 1, 2, 3],
       ignoreArrayIndexes: true,
       enforceConst: true,
     }],
@@ -123,12 +115,11 @@
       ignoreRestSiblings: true,
     }],
     'no-useless-call': 'error',
-    'prefer-destructuring': 'error',
-    'prefer-promise-reject-errors': ['error', {
-      allowEmptyReject: true,
-    }],
     'import/default': 'error',
     'import/named': 'error',
+    'import/no-anonymous-default-export': ['error', {
+      allowObject: true,
+    }],
 
     // Does not work with Flow
     'no-extra-parens': 'off',
@@ -137,24 +128,5 @@
 
     // Does not work with class properties
     'no-invalid-this': 'off',
-
-    // Temporary for tests
-    // 'no-magic-numbers': 'off',
-    'jest/no-identical-title': 'error',
-    'jest/valid-expect': 'error',
   },
-  // overrides: [
-  //   {
-  //     files: ['tests/**/*.test.js'],
-  //     plugins: ['jest'],
-  //     env: {
-  //       jest: true,
-  //     },
-  //     rules: {
-  //       'no-magic-numbers': 'off',
-  //       'jest/no-identical-title': 'error',
-  //       'jest/valid-expect': 'error',
-  //     },
-  //   },
-  // ],
 }
