--- a/eslint.json5
+++ b/eslint.json5
@@ -15,7 +15,7 @@
       eventHandlerPropPrefix: 'on',
     }],
     'react/jsx-key': 'error',
-    'react/jsx-no-literals': 'error',
+    'react/jsx-no-literals': 'off', // Broken
     'react/no-direct-mutation-state': 'error',
     'react/sort-prop-types': ['error', {
       ignoreCase: false,
