--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "react-dom": "^16.0.0",
     "react-test-renderer": "^16.0.0",
     "rimraf": "^2.6.1",
-    "uglifyjs-webpack-plugin": "1.0.0-beta.3",
+    "uglifyjs-webpack-plugin": "1.0.1",
     "webpack": "^3.8.1",
     "yargs-parser": "^8.0.0"
   },
