--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "babel-runtime": "^6.26.0",
+    "chalk": "^2.3.0",
     "clean-webpack-plugin": "^0.1.17",
     "copy": "^0.3.1",
     "enzyme": "^3.1.0",
@@ -67,6 +68,7 @@
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-react": "^7.4.0",
     "eslint-plugin-unicorn": "^2.1.2",
+    "execa": "^0.8.0",
     "flow-bin": "^0.57.3",
     "jest": "^21.2.1",
     "react": "^16.0.0",
