--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "copy": "^0.3.1",
     "enzyme": "^3.1.0",
     "enzyme-adapter-react-16": "^1.0.2",
-    "eslint": "^4.9.0",
+    "eslint": "^4.10.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-flowtype": "^2.39.1",
     "eslint-plugin-import": "^2.8.0",
@@ -79,7 +79,7 @@
     "yargs-parser": "^8.0.0"
   },
   "eslintConfig": {
-    "extends": "./eslint.node.json5",
+    "extends": "./eslint.js",
     "rules": {
       "no-var": "off",
       "no-console": "off"
