--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^7.2.0",
-    "babel-jest": "^21.2.0",
+    "babel-jest": "^22.0.3",
     "babel-loader": "^7.1.2",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-transform-dev": "^2.0.1",
@@ -57,26 +57,27 @@
     "clean-webpack-plugin": "^0.1.17",
     "copy": "^0.3.1",
     "enzyme": "^3.2.0",
-    "enzyme-adapter-react-16": "^1.1.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^4.13.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-flowtype": "^2.40.1",
     "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-jest": "^21.4.3",
+    "eslint-plugin-jest": "^21.5.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-react": "^7.5.1",
     "eslint-plugin-unicorn": "^3.0.1",
     "execa": "^0.8.0",
     "flow-bin": "^0.61.0",
-    "jest": "^21.2.1",
+    "jest": "^22.0.3",
+    "jest-runner-eslint": "^0.3.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-test-renderer": "^16.2.0",
     "rimraf": "^2.6.1",
     "uglifyjs-webpack-plugin": "1.1.4",
     "webpack": "^3.10.0",
-    "yargs-parser": "^8.0.0"
+    "yargs-parser": "^8.1.0"
   },
   "eslintConfig": {
     "extends": "./eslint.js",
