--- a/package.json
+++ b/package.json
@@ -8,19 +8,11 @@
     "config",
     "babel",
     "eslint",
-    "jest",
     "flow",
+    "jest",
+    "prettier",
     "webpack"
   ],
-  "bin": {
-    "build-lib": "./bin/build.js",
-    "bundle-lib": "./bin/bundle.js",
-    "init-package": "./bin/init.js",
-    "run-linter": "./bin/lint.js",
-    "run-tests": "./bin/test.js",
-    "sync-configs": "./bin/sync.js",
-    "type-check": "./bin/check.js"
-  },
   "scripts": {
     "lint": "eslint .",
     "test": "yarn run lint",
@@ -39,6 +31,11 @@
     "node": ">=6.5.0"
   },
   "dependencies": {
+    "@beemo/core": "^0.1.0",
+    "@beemo/driver-babel": "^0.1.0",
+    "@beemo/driver-eslint": "^0.1.0",
+    "@beemo/driver-jest": "^0.1.0",
+    "@beemo/driver-prettier": "^0.1.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.1",
@@ -53,31 +50,28 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "babel-runtime": "^6.26.0",
-    "chalk": "^2.3.0",
     "clean-webpack-plugin": "^0.1.17",
-    "copy": "^0.3.1",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^4.16.0",
     "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-flowtype": "^2.41.0",
+    "eslint-plugin-flowtype": "^2.41.1",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jest": "^21.7.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-react": "^7.5.1",
     "eslint-plugin-unicorn": "^3.0.1",
-    "execa": "^0.9.0",
-    "flow-bin": "^0.63.1",
+    "flow-bin": "^0.64.0",
     "jest": "^22.1.4",
     "jest-runner-eslint": "^0.3.0",
+    "prettier": "^1.10.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-test-renderer": "^16.2.0",
     "rimraf": "^2.6.1",
     "uglifyjs-webpack-plugin": "1.1.6",
-    "webpack": "^3.10.0",
-    "yargs-parser": "^8.1.0"
+    "webpack": "^3.10.0"
   },
   "eslintConfig": {
     "extends": "./eslint.js",
