--- a/package.json
+++ b/package.json
@@ -30,12 +30,13 @@
     "node": ">=6.5.0"
   },
   "dependencies": {
-    "@beemo/core": "^0.7.0",
-    "@beemo/driver-babel": "^0.7.0",
-    "@beemo/driver-eslint": "^0.7.0",
-    "@beemo/driver-flow": "^0.7.0",
-    "@beemo/driver-jest": "^0.7.0",
-    "@beemo/driver-prettier": "^0.7.0",
+    "@beemo/cli": "^0.8.0",
+    "@beemo/core": "^0.8.0",
+    "@beemo/driver-babel": "^0.8.0",
+    "@beemo/driver-eslint": "^0.8.0",
+    "@beemo/driver-flow": "^0.8.0",
+    "@beemo/driver-jest": "^0.8.0",
+    "@beemo/driver-prettier": "^0.8.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.1",
