Added init script.

--- a/package.json
+++ b/package.json
@@ -30,13 +30,13 @@
     "node": ">=6.5.0"
   },
   "dependencies": {
-    "@beemo/cli": "^0.8.0",
-    "@beemo/core": "^0.8.0",
-    "@beemo/driver-babel": "^0.8.0",
-    "@beemo/driver-eslint": "^0.8.0",
-    "@beemo/driver-flow": "^0.8.0",
-    "@beemo/driver-jest": "^0.8.0",
-    "@beemo/driver-prettier": "^0.8.0",
+    "@beemo/cli": "^0.9.0",
+    "@beemo/core": "^0.9.0",
+    "@beemo/driver-babel": "^0.9.0",
+    "@beemo/driver-eslint": "^0.9.0",
+    "@beemo/driver-flow": "^0.9.0",
+    "@beemo/driver-jest": "^0.9.0",
+    "@beemo/driver-prettier": "^0.9.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.1",
@@ -54,7 +54,7 @@
     "clean-webpack-plugin": "^0.1.18",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
-    "eslint": "^4.16.0",
+    "eslint": "^4.17.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-flowtype": "^2.42.0",
@@ -65,12 +65,14 @@
     "eslint-plugin-react": "^7.6.1",
     "eslint-plugin-unicorn": "^3.0.1",
     "flow-bin": "^0.64.0",
+    "fs-extra": "^5.0.0",
     "jest": "^22.1.4",
     "jest-runner-eslint": "^0.4.0",
     "prettier": "^1.10.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-test-renderer": "^16.2.0",
+    "rimraf": "^2.6.2",
     "uglifyjs-webpack-plugin": "1.1.8",
     "webpack": "^3.10.0"
   },
