--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@milesj/build-tool-config",
-  "version": "0.58.0",
+  "version": "0.59.0",
   "description": "Build tool configuration files for easy re-use.",
   "keywords": [
     "build",
@@ -80,7 +80,10 @@
   },
   "beemo": {
     "config": "@local",
-    "drivers": ["eslint", "prettier"],
+    "drivers": [
+      "eslint",
+      "prettier"
+    ],
     "execute": {
       "cleanup": false
     },
