--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-react": "^7.6.1",
     "eslint-plugin-unicorn": "^3.0.1",
+    "execa": "^0.9.0",
     "flow-bin": "^0.64.0",
     "fs-extra": "^5.0.0",
     "jest": "^22.1.4",
