--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "eslint": "beemo eslint . --color --report-unused-disable-directives",
     "flow": "beemo flow check",
-    "prettier": "beemo prettier --write ./{configs,dotfiles,scripts}/*.{js,json,md} ./README.md",
+    "prettier": "beemo prettier --write \"./{configs,dotfiles,scripts}/*.{js,json,md}\" ./README.md",
     "test": "yarn run eslint && yarn run flow",
     "preversion": "yarn test"
   },
@@ -33,18 +33,18 @@
     "node": ">=6.5.0"
   },
   "dependencies": {
-    "@beemo/cli": "^0.11.0",
-    "@beemo/core": "^0.11.0",
-    "@beemo/driver-babel": "^0.11.0",
-    "@beemo/driver-eslint": "^0.11.0",
-    "@beemo/driver-flow": "^0.11.0",
-    "@beemo/driver-jest": "^0.11.0",
-    "@beemo/driver-prettier": "^0.11.0",
+    "@beemo/cli": "^0.12.0",
+    "@beemo/core": "^0.12.0",
+    "@beemo/driver-babel": "^0.12.0",
+    "@beemo/driver-eslint": "^0.12.0",
+    "@beemo/driver-flow": "^0.12.0",
+    "@beemo/driver-jest": "^0.12.0",
+    "@beemo/driver-prettier": "^0.12.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.2",
     "babel-jest": "^22.4.1",
-    "babel-loader": "^7.1.3",
+    "babel-loader": "^7.1.4",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-transform-dev": "^2.0.1",
     "babel-plugin-transform-export-extensions": "^6.22.0",
@@ -54,15 +54,15 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "babel-runtime": "^6.26.0",
-    "clean-webpack-plugin": "^0.1.18",
+    "clean-webpack-plugin": "^0.1.19",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
-    "eslint": "^4.18.1",
+    "eslint": "^4.18.2",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-flowtype": "^2.46.1",
     "eslint-plugin-import": "^2.9.0",
-    "eslint-plugin-jest": "^21.12.2",
+    "eslint-plugin-jest": "^21.13.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-react": "^7.7.0",
