--- a/package.json
+++ b/package.json
@@ -32,14 +32,15 @@
   "engines": {
     "node": ">=6.5.0"
   },
+  "browserslist": ["last 2 versions"],
   "dependencies": {
-    "@beemo/cli": "^0.12.0",
-    "@beemo/core": "^0.12.0",
-    "@beemo/driver-babel": "^0.12.0",
-    "@beemo/driver-eslint": "^0.12.0",
-    "@beemo/driver-flow": "^0.12.0",
-    "@beemo/driver-jest": "^0.12.0",
-    "@beemo/driver-prettier": "^0.12.0",
+    "@beemo/cli": "^0.13.0",
+    "@beemo/core": "^0.13.0",
+    "@beemo/driver-babel": "^0.13.0",
+    "@beemo/driver-eslint": "^0.13.0",
+    "@beemo/driver-flow": "^0.13.0",
+    "@beemo/driver-jest": "^0.13.0",
+    "@beemo/driver-prettier": "^0.13.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.2",
@@ -60,15 +61,16 @@
     "eslint": "^4.18.2",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-compat": "^2.2.0",
     "eslint-plugin-flowtype": "^2.46.1",
     "eslint-plugin-import": "^2.9.0",
-    "eslint-plugin-jest": "^21.13.0",
+    "eslint-plugin-jest": "^21.15.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-promise": "^3.7.0",
     "eslint-plugin-react": "^7.7.0",
     "eslint-plugin-unicorn": "^4.0.2",
-    "execa": "^0.9.0",
-    "flow-bin": "^0.66.0",
+    "execa": "^0.10.0",
+    "flow-bin": "^0.68.0",
     "fs-extra": "^5.0.0",
     "gitbook-cli": "^2.3.2",
     "jest": "^22.4.2",
@@ -78,7 +80,7 @@
     "react-dom": "^16.2.0",
     "react-test-renderer": "^16.2.0",
     "rimraf": "^2.6.2",
-    "uglifyjs-webpack-plugin": "1.2.2",
+    "uglifyjs-webpack-plugin": "1.2.3",
     "webpack": "^3.11.0"
   },
   "beemo": {
