--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@milesj/build-tool-config",
-  "version": "0.67.1",
+  "version": "0.68.0",
   "description": "Build tool configuration files for easy re-use.",
   "keywords": [
     "build",
@@ -32,7 +32,9 @@
   "engines": {
     "node": ">=6.5.0"
   },
-  "browserslist": ["last 2 versions"],
+  "browserslist": [
+    "last 2 versions"
+  ],
   "dependencies": {
     "@beemo/cli": "^0.13.0",
     "@beemo/core": "^0.13.0",
