--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-promise": "^3.7.0",
     "eslint-plugin-react": "^7.7.0",
+    "eslint-plugin-typescript": "^0.10.0",
     "eslint-plugin-unicorn": "^4.0.2",
     "execa": "^0.10.0",
     "flow-bin": "^0.68.0",
@@ -82,6 +83,8 @@
     "react-dom": "^16.2.0",
     "react-test-renderer": "^16.2.0",
     "rimraf": "^2.6.2",
+    "typescript": "^2.7.2",
+    "typescript-eslint-parser": "^14.0.0",
     "uglifyjs-webpack-plugin": "1.2.3",
     "webpack": "^3.11.0"
   },
