--- a/package.json
+++ b/package.json
@@ -8,16 +8,15 @@
     "config",
     "babel",
     "eslint",
-    "flow",
     "jest",
     "prettier",
+    "typescript",
     "webpack"
   ],
   "scripts": {
     "eslint": "beemo eslint . --color --report-unused-disable-directives",
-    "flow": "beemo flow check",
     "prettier": "beemo prettier --write \"./{configs,dotfiles,scripts}/*.{js,json,md}\" ./README.md",
-    "test": "yarn run eslint && yarn run flow",
+    "test": "yarn run eslint",
     "preversion": "yarn test"
   },
   "repository": {
@@ -40,13 +39,15 @@
     "@beemo/core": "^0.13.0",
     "@beemo/driver-babel": "^0.13.0",
     "@beemo/driver-eslint": "^0.13.0",
-    "@beemo/driver-flow": "^0.13.0",
     "@beemo/driver-jest": "^0.13.0",
     "@beemo/driver-prettier": "^0.13.0",
     "@beemo/driver-typescript": "^0.2.0",
+    "@types/enzyme": "^3.1.9",
+    "@types/jest": "^22.2.0",
+    "@types/node": "^9.4.7",
+    "@types/react": "^16.0.40",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
-    "babel-eslint": "^8.2.2",
     "babel-jest": "^22.4.1",
     "babel-loader": "^7.1.4",
     "babel-plugin-external-helpers": "^6.22.0",
@@ -54,7 +55,6 @@
     "babel-plugin-transform-export-extensions": "^6.22.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
-    "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "babel-runtime": "^6.26.0",
@@ -65,7 +65,6 @@
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-compat": "^2.2.0",
-    "eslint-plugin-flowtype": "^2.46.1",
     "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-jest": "^21.15.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
@@ -74,7 +73,6 @@
     "eslint-plugin-typescript": "^0.10.0",
     "eslint-plugin-unicorn": "^4.0.2",
     "execa": "^0.10.0",
-    "flow-bin": "^0.68.0",
     "fs-extra": "^5.0.0",
     "gitbook-cli": "^2.3.2",
     "jest": "^22.4.2",
@@ -93,7 +91,6 @@
     "module": "@local",
     "drivers": [
       "eslint",
-      "flow",
       "prettier"
     ],
     "eslint": {
