--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "react-dom": "^16.2.0",
     "react-test-renderer": "^16.2.0",
     "rimraf": "^2.6.2",
+    "ts-jest": "^22.4.1",
     "typescript": "^2.7.2",
     "typescript-eslint-parser": "^14.0.0",
     "uglifyjs-webpack-plugin": "1.2.3",
