--- a/package.json
+++ b/package.json
@@ -37,11 +37,11 @@
   "dependencies": {
     "@beemo/cli": "^0.15.0",
     "@beemo/core": "^0.15.0",
-    "@beemo/driver-babel": "^0.15.0",
+    "@beemo/driver-babel": "^0.15.1",
     "@beemo/driver-eslint": "^0.15.0",
     "@beemo/driver-jest": "^0.15.0",
     "@beemo/driver-prettier": "^0.15.0",
-    "@beemo/driver-typescript": "^0.4.0",
+    "@beemo/driver-typescript": "^0.4.1",
     "@types/enzyme": "^3.1.9",
     "@types/jest": "^22.2.0",
     "@types/node": "^9.4.7",
@@ -65,6 +65,7 @@
     "eslint": "^4.19.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-babel": "^4.1.2",
     "eslint-plugin-compat": "^2.2.0",
     "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-jest": "^21.15.0",
