--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@milesj/build-tool-config",
-  "version": "0.76.2",
+  "version": "0.77.0",
   "description": "Build tool configuration files for easy re-use.",
   "keywords": [
     "build",
@@ -17,7 +17,7 @@
     "eslint": "beemo eslint .",
     "prettier": "beemo prettier \"./{configs,dotfiles,scripts}/*.{js,json,md}\"",
     "test": "yarn run eslint",
-    "preversion": "yarn test"
+    "release": "np --no-cleanup"
   },
   "repository": {
     "type": "git",
