--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "@beemo/driver-typescript": "^0.5.0",
     "@types/enzyme": "^3.1.9",
     "@types/jest": "^22.2.3",
-    "@types/react": "^16.3.9",
+    "@types/react": "16.0.41",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-jest": "^22.4.3",
